# OpenGLReading

./: CMakeLists.sublime-workspace  CMakeLists.txt  README.md  readme.txt
data/: at1n512.dds  kueken3-bgr8-mipmaps.dds  kueken7_bc1_rgb.ktx  kueken7_bc1_srgb.dds  kueken7_bc1_srgb.ktx  kueken7_bc3_rgba.ktx  kueken7_bc3_srgba.dds  kueken7_bc3_srgba.ktx  kueken7_etc2_rgb8.ktx  kueken7_r5g6b5_unorm.ktx  kueken7_rg11b10.dds  kueken7_rgb10_a2_ui.ktx  kueken7_rgb9e5.dds  kueken7_rgba16f.ktx  kueken7_rgba8_snorm.ktx  kueken7_srgb8_unorm.dds  kueken7_srgba8_unorm.dds  kueken7_srgba8_unorm.ktx  rgba512.dds
data/es-200/: flat-color.frag
data/es-300/: fbo-srgb.vert  flat-color.frag
data/gl-320/: buffer-uniform.vert  draw-base-vertex.frag  draw-image-space.vert  fbo-srgb.frag  glsl-cast-fail.vert  glsl-discard.frag  primitive-point.vert  primitive-sprite.frag  primitive-sprite.vert  texture-float.frag
data/gl-330/: image-2d.frag  texture-rect.vert
data/gl-400/: subroutine.frag  subroutine.vert  texture-cube.frag
data/gl-410/: primitive-instancing.geom
data/gl-420/: buffer-uniform.vert  debug-output.frag  debug-output.vert  image-load.frag  image-load.vert  sampler-fetch.frag
data/gl-430/: draw-without-vertex-attrib.vert  fbo-invalidate-render.vert  fbo-splash.frag  program-compute-image.frag  program-compute.comp  program-subroutine.geom
data/gl-440/: sampler-wrap.frag  sampler-wrap.vert
data/gl-500/: conservative-raster-blit.frag  fbo-layered-layer-nv.vert  fbo-layered-viewport-nv.vert  fbo-multisample-position-amd.frag  glsl-vote.frag  glsl-vote.vert  multi-draw-indirect-count.frag  multi-draw-indirect-count.vert  shader-blend-render-intel.frag  shader-invocation.frag
data/micro/: test_buffer.frag  test_buffer.vert
framework/: CMakeLists.txt  buffer.cpp  buffer.hpp  caps.cpp  caps.hpp  compiler.cpp  compiler.hpp  csv.hpp  dsa.cpp  dsa.hpp  error.cpp  png.cpp  png.hpp  sementics.hpp  test.cpp  test.hpp  util.cpp  util.hpp  vertex.hpp
micro/: CMakeLists.txt  main.cpp  test_buffer.cpp  test_buffer.hpp  test_compiler.cpp  test_compiler.hpp  test_draw_arrays.cpp  test_draw_arrays.hpp  test_draw_arrays_vao.cpp  test_draw_arrays_vao.hpp  test_draw_call.cpp  test_draw_call.hpp  test_draw_elements.cpp  test_draw_elements.hpp  test_draw_indexing.cpp  test_draw_indexing.hpp  test_screenspace_coherence.cpp  test_screenspace_coherence.hpp  test_small_primitive.cpp  test_small_primitive.hpp  test_uniform_caching.cpp  test_uniform_caching.hpp
tests/: CMakeLists.txt  es-200-draw-elements.cpp  es-300-draw-elements.cpp  es-300-fbo-srgb.cpp  gl-300-fbo-multisample.cpp  gl-300-test-alpha.cpp  gl-320-buffer-uniform-shared.cpp  gl-320-buffer-uniform.cpp  gl-320-buffer-update.cpp  gl-320-caps.cpp  gl-320-draw-base-vertex.cpp  gl-320-draw-image-space.cpp  gl-320-draw-instanced.cpp  gl-320-draw-multiple.cpp  gl-320-draw-range-arrays.cpp  gl-320-draw-range-elements.cpp  gl-320-draw-without-vertex-attrib.cpp  gl-320-fbo-blend.cpp  gl-320-fbo-blit.cpp  gl-320-fbo-depth-multisample.cpp  gl-320-fbo-depth-stencil.cpp  gl-320-fbo-depth.cpp  gl-320-fbo-integer-blit.cpp  gl-320-fbo-integer.cpp  gl-320-fbo-layered.cpp  gl-320-fbo-multisample-explicit.cpp  gl-320-fbo-multisample-integer.cpp  gl-320-fbo-multisample.cpp  gl-320-fbo-rtt-texture-array.cpp  gl-320-fbo-rtt.cpp  gl-320-fbo-shadow.cpp  gl-320-fbo-srgb-blend.cpp  gl-320-fbo-srgb-decode-ext.cpp  gl-320-fbo-srgb.cpp  gl-320-fbo.cpp  gl-320-glsl-builtin-blocks.cpp  gl-320-glsl-cast-fail.cpp  gl-320-glsl-discard.cpp  gl-320-glsl-input-struct.cpp  gl-320-glsl-precision.cpp  (+173 more)
